--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1905,6 +1905,332 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "symboling              int64\n",
+       "normalized-losses     object\n",
+       "make                  object\n",
+       "fuel-type             object\n",
+       "aspiration            object\n",
+       "num-of-doors          object\n",
+       "body-style            object\n",
+       "drive-wheels          object\n",
+       "engine-location       object\n",
+       "wheel-base           float64\n",
+       "length               float64\n",
+       "width                float64\n",
+       "height               float64\n",
+       "curb-weight            int64\n",
+       "engine-type           object\n",
+       "num-of-cylinders      object\n",
+       "engine-size            int64\n",
+       "fuel-system           object\n",
+       "bore                  object\n",
+       "stroke                object\n",
+       "compression-ratio    float64\n",
+       "horsepower            object\n",
+       "peak-rpm              object\n",
+       "city-mpg               int64\n",
+       "highway-mpg            int64\n",
+       "price                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "symboling              int64\n",
+       "normalized-losses      int32\n",
+       "make                  object\n",
+       "fuel-type             object\n",
+       "aspiration            object\n",
+       "num-of-doors          object\n",
+       "body-style            object\n",
+       "drive-wheels          object\n",
+       "engine-location       object\n",
+       "wheel-base           float64\n",
+       "length               float64\n",
+       "width                float64\n",
+       "height               float64\n",
+       "curb-weight            int64\n",
+       "engine-type           object\n",
+       "num-of-cylinders      object\n",
+       "engine-size            int64\n",
+       "fuel-system           object\n",
+       "bore                 float64\n",
+       "stroke               float64\n",
+       "compression-ratio    float64\n",
+       "horsepower            object\n",
+       "peak-rpm             float64\n",
+       "city-mpg               int64\n",
+       "highway-mpg            int64\n",
+       "price                float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# correcting the data format of some columns \n",
+    "df[[\"bore\", \"stroke\",]] = df[[\"bore\", \"stroke\"]].astype(\"float\")\n",
+    "df[[\"normalized-losses\"]] = df[[\"normalized-losses\"]].astype(\"int\")\n",
+    "df[[\"price\"]]  = df[[\"price\"]].astype(\"float\")\n",
+    "df[[\"peak-rpm\"]]  = df[[\"peak-rpm\"]].astype(\"float\")\n",
+    "df.dtypes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert fuel consumption from mpg to L/100km\n",
+    "# fromula: L/100km = 235/mpg\n",
+    "\n",
+    "df[\"city-L/100km\"] = 235/df[\"city-mpg\"] # For the city-mpg column \n",
+    "df[\"highway-L/100km\"] = 235/df[\"highway-mpg\"] # for the highway-mpg column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>symboling</th>\n",
+       "      <th>normalized-losses</th>\n",
+       "      <th>make</th>\n",
+       "      <th>fuel-type</th>\n",
+       "      <th>aspiration</th>\n",
+       "      <th>num-of-doors</th>\n",
+       "      <th>body-style</th>\n",
+       "      <th>drive-wheels</th>\n",
+       "      <th>engine-location</th>\n",
+       "      <th>wheel-base</th>\n",
+       "      <th>...</th>\n",
+       "      <th>bore</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>compression-ratio</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>peak-rpm</th>\n",
+       "      <th>city-mpg</th>\n",
+       "      <th>highway-mpg</th>\n",
+       "      <th>price</th>\n",
+       "      <th>city-L/100km</th>\n",
+       "      <th>highway-L/100km</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13495.0</td>\n",
+       "      <td>11.190476</td>\n",
+       "      <td>8.703704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>122</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>convertible</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>88.6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>11.190476</td>\n",
+       "      <td>8.703704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>alfa-romero</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>two</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>154</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>26</td>\n",
+       "      <td>16500.0</td>\n",
+       "      <td>12.368421</td>\n",
+       "      <td>9.038462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>13950.0</td>\n",
+       "      <td>9.791667</td>\n",
+       "      <td>7.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>164</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>std</td>\n",
+       "      <td>four</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>4wd</td>\n",
+       "      <td>front</td>\n",
+       "      <td>99.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>115</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17450.0</td>\n",
+       "      <td>13.055556</td>\n",
+       "      <td>10.681818</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   symboling  normalized-losses         make fuel-type aspiration  \\\n",
+       "0          3                122  alfa-romero       gas        std   \n",
+       "1          3                122  alfa-romero       gas        std   \n",
+       "2          1                122  alfa-romero       gas        std   \n",
+       "3          2                164         audi       gas        std   \n",
+       "4          2                164         audi       gas        std   \n",
+       "\n",
+       "  num-of-doors   body-style drive-wheels engine-location  wheel-base  ...  \\\n",
+       "0          two  convertible          rwd           front        88.6  ...   \n",
+       "1          two  convertible          rwd           front        88.6  ...   \n",
+       "2          two    hatchback          rwd           front        94.5  ...   \n",
+       "3         four        sedan          fwd           front        99.8  ...   \n",
+       "4         four        sedan          4wd           front        99.4  ...   \n",
+       "\n",
+       "   bore  stroke  compression-ratio  horsepower peak-rpm city-mpg  highway-mpg  \\\n",
+       "0  3.47    2.68                9.0         111   5000.0       21           27   \n",
+       "1  3.47    2.68                9.0         111   5000.0       21           27   \n",
+       "2  2.68    3.47                9.0         154   5000.0       19           26   \n",
+       "3  3.19    3.40               10.0         102   5500.0       24           30   \n",
+       "4  3.19    3.40                8.0         115   5500.0       18           22   \n",
+       "\n",
+       "     price  city-L/100km  highway-L/100km  \n",
+       "0  13495.0     11.190476         8.703704  \n",
+       "1  16500.0     11.190476         8.703704  \n",
+       "2  16500.0     12.368421         9.038462  \n",
+       "3  13950.0      9.791667         7.833333  \n",
+       "4  17450.0     13.055556        10.681818  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
